packages/styles/scss/components/_item-initials.scss
.item-icon {
	inline-size: rem($conversation-icon-size);
	block-size: rem($conversation-icon-size);
	font-size: rem(12);
	background-color: var(--background-strong);
}

.item-sender-image {
	background-color: white; // background color forced to display sender image logo
}

