Fix bleeding background in sender image
- did try several stuff, seems using transform works on Firefox Win

UXE-275

--- a/packages/styles/scss/components/_item-initials.scss
+++ b/packages/styles/scss/components/_item-initials.scss
@@ -7,4 +7,5 @@
 
 .item-sender-image {
 	background-color: white; // background color forced to display sender image logo
+	transform: scale(1.0); // crazy fix for bleeding bg color on radius.
 }
